# ChainForge

./: .gitignore  CODE_REVIEW.md  README.md  README.zh.md  pyproject.toml
chainforge/: __init__.py  __main__.py  _version.py  client.py  deploy.py  logging.py  scheduler.py  server.py
chainforge/a2a/: __init__.py  card.py  client.py  integration.py  server.py  types.py
chainforge/agents/: __init__.py  agent_chain.py  agent_hub.py  agent_tool.py  chain_of_thought.py  conversational.py  plan_execute.py  (+7 more)
example/: 01_core_tool.py  02_core_message.py  03_core_stream.py  04_core_pipeline.py  05_core_dag.py  06_core_state.py  07_core_structured_output.py  08_core_middleware.py  09_testing_mock.py  10_parsers.py  11_memory_buffer.py  12_reasoning.py  13_guardrails.py  14_orchestration_swarm.py  15_tracing.py  16_time_travel.py  17_consensus.py  18_self_evolving.py  19_tool_synthesis.py  20_liquid_memory.py  21_guardrail_injection.py  22_provenance_graph.py  23_workflow_dsl.py  24_multimodal.py  25_dream_mode.py  26_tech_tree.py  27_population.py  28_behavior_test.py  29_budget.py  30_deploy.py  31_aldp.py  README.md  run_all.py
examples/: basic_agent.py  memory_example.py
improvements/: AGENT_CONFIG.md  AGENT_VISUAL_DEBUGGER.md  ALDP.md  ARCHITECTURE_GAPS.md  ARCHITECTURE_GAPS_V2.md  ASL.md  AUDITABLE_EXECUTION_CHAIN.md  BEHAVIOR_CONTRACT_RUNTIME.md  CACHE.md  CALLBACKS.md  CONTEXT.md  CONVERSATION.md  CRITICAL.md  EVOLUTION.md  EXECUTION_PROVENANCE_UPGRADE.md  FLEET.md  GOOGLE_ADK_INTEGRATION.md  GUARDRAILS.md  HIGH.md  INSPECTOR.md  MCP_REGISTRY.md  MEDIUM.md  MEMORY.md  MEMORY_CONSOLIDATION.md  NL_AGENT_COMPILER.md  PARSERS_MEMORY_TOOLKITS.md  PHASE11_15_DESIGN.md  PLAN.md  PROMPTS.md  RAG.md  REASONING.md  ROADMAP.md  SANDBOX.md  SELF_HEALING_AGENTS.md  SMART_ROUTER_2.md  TESTING.md  TIMETRAVEL_DEBUGGER.md  TRACING.md
scripts/: add_license_header.py
tests/: test_a2a.py  test_adaptive_router.py  test_adversarial.py  test_agent_linking.py  test_agent_parallel.py  test_agents_extra.py  test_agents_more.py  test_audit.py  test_cache.py  test_callbacks.py  test_cli.py  test_compiler.py  test_config.py  test_consolidation.py  test_context.py  test_contracts.py  test_conversation.py  test_entity_memory.py  test_eval.py  test_files.py  test_fleet.py  test_graph.py  test_guardrails.py  test_healing.py  test_human_in_loop.py  test_inspector.py  test_logging.py  test_mcp_registry.py  test_memory.py  test_memory_vector.py  test_message.py  test_middleware.py  test_middleware_impl.py  test_middleware_langfuse.py  test_middleware_otel.py  test_orchestration.py  test_parsers.py  test_pipeline.py  test_prompts.py  test_provenance.py  (+16 more)
(+188 files in other folders)
